# booking-platform

./: .envrc  .gitignore  CLAUDE.md  README.md  Taskfile.yaml
.specify/memory/: constitution.md
backend/: .agentcore.json  .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-api.txt  test_agent.py
backend/agent/: pyproject.toml
backend/agent/src/agent/: __init__.py  booking_agent.py  main.py
backend/api/: pyproject.toml
backend/scripts/: generate_types.py  seed_data.py
backend/shared/: pyproject.toml
backend/shared/src/shared/: __init__.py
backend/shared/src/shared/data/: area_info.json
backend/shared/src/shared/models/: __init__.py  area_info.py  availability.py  customer.py  reservation.py  verification.py
backend/shared/src/shared/services/: availability.py  booking.py  dynamodb.py  identity_client.py  notification_service.py  payment_service.py  pricing.py
backend/shared/src/shared/tools/: __init__.py  area_info.py  availability.py  customer.py  guest.py  payments.py  pricing.py  property.py  reservations.py
backend/shared/src/shared/utils/: __init__.py  jwt.py
backend/src/: __init__.py  agent_app.py  api_app.py
backend/tests/: conftest.py
frontend/: .eslintrc.json  .yarnrc.yml  next.config.js  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/playwright-report/: index.html
infrastructure/: main.tf  outputs.tf  variables.tf
infrastructure/environments/: backend-dev.tfvars  backend-prod.tfvars  dev.tfvars  prod.tfvars
specs/001-agent-booking-platform/: data-model.md  (+5 more)
(+181 files in other folders)
