[project]
name = "shared"
version = "0.1.0"
description = "Shared models, services, and tools for Booking platform"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }

dependencies = [
  "pydantic>=2.0.0",
  "email-validator>=2.0.0",
  "boto3>=1.35.0",
  "python-dotenv>=1.0.0",
  "pyjwt>=2.8.0",
  "bedrock-agentcore>=0.1.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

# UV build backend expects src/shared layout by default
# when project name is "shared"
